# rgbtd

./: .gitignore  CDTSensor.h  CMakeLists.txt  Camera.h  EnvPaths.props  EnvPaths.vsprops  Exception.h  LBPFeature.h  OpenNICamera.h  PersonDetector.vcxproj  README.md  RGBDCapture.vcxproj  RGBDT.sln  RGBDTApp 2012.sln  RGBDTApp.cpp  RGBDTApp.sln  RGBDTApp.vcproj  RGBDTApp.vcxproj  test.xml
doc/: Doxyfile
matlab/: Untitled.m  ada_feature_importance.fig  cl_features.m  cl_features.mat  cl_instances.m  cl_modality.m  cl_modality_cum.m  cl_modality_cum2.m  cl_modality_fov.m  cl_strat.m  clada_feature_analysis.m  clada_modality.m  classify_adaboost.m  classify_svm.m  convert_to_libsvm.m  convert_to_raw.m  feature_stats.m  libsvmread.mexw32  libsvmwrite.mexw32  load_dataset.m  load_feature_data.m  make_video.m  pyramid.fig  read_class.m  read_class_int.m  readclass.m  readxml_fast.m  remove_nan.m  results_cl1.mat  results_cl2.mat  results_cum_modality.fig  results_cum_modality2.fig  results_instances.mat  results_modality.fig  results_modality.mat  results_modality_2.fig  results_modality_ada.fig  results_modality_fov.mat  scale_svm.m  simple_svm_test.m  (+12 more)
src/: CDTSensor.h  Camera.h  Classifier.h  LBPFeature.h  LBPFeature2.h  OpenNICamera.h  PersonDetectorApp.cpp  RGBDCapture.cpp  RGBDTApp.cpp
